timeseries, senior references, restructuring

--- a/Data Cleaning for UCI.ipynb
+++ b/Data Cleaning for UCI.ipynb
@@ -25,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_excel('Data/uci_online_retail.xlsx')"
+    "df = pd.read_excel('Data/Raw Data/uci_online_retail.xlsx')"
    ]
   },
   {
