rf on olist (unbalanced)

--- a/Data Cleaning for UCI.ipynb
+++ b/Data Cleaning for UCI.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "d95a3c9a",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "32339e88",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "4a768abe",
    "metadata": {},
    "outputs": [
@@ -222,7 +222,7 @@
        "[541909 rows x 8 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "706d190d",
    "metadata": {},
    "outputs": [
@@ -338,7 +338,7 @@
        "[3839 rows x 1 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "d3066ec9",
    "metadata": {},
    "outputs": [
@@ -450,7 +450,7 @@
        "299984  -11062.06         NaN  United Kingdom  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "f4b30d8e",
    "metadata": {},
    "outputs": [
@@ -512,7 +512,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "fc237925",
    "metadata": {},
    "outputs": [
@@ -726,7 +726,7 @@
        "[541906 rows x 8 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -743,21 +743,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "14d938ae",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\bryan\\AppData\\Local\\Temp/ipykernel_19292/1951423686.py:9: SettingWithCopyWarning: \n",
+      "C:\\Users\\bryan\\AppData\\Local\\Temp/ipykernel_20376/1951423686.py:9: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  tempL[colName+'Trunc'] = tempL[colName].astype('str').str[1:].astype('int')\n",
-      "C:\\Users\\bryan\\AppData\\Local\\Temp/ipykernel_19292/1951423686.py:14: SettingWithCopyWarning: \n",
+      "C:\\Users\\bryan\\AppData\\Local\\Temp/ipykernel_20376/1951423686.py:14: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1099,7 +1101,7 @@
        "[9288 rows x 18 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1126,7 +1128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "2bceb64f",
    "metadata": {},
    "outputs": [],
@@ -1155,7 +1157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "bb9ae110",
    "metadata": {},
    "outputs": [
@@ -1232,7 +1234,7 @@
        "max     80995.000000"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1245,7 +1247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "fe5b6e1f",
    "metadata": {},
    "outputs": [
@@ -1437,7 +1439,7 @@
        "[10624 rows x 8 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1449,7 +1451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "f138984c",
    "metadata": {},
    "outputs": [
@@ -1641,7 +1643,7 @@
        "[1336 rows x 8 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1654,7 +1656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "e273daee",
    "metadata": {},
    "outputs": [
@@ -1672,7 +1674,7 @@
        "Name: CustomerID, dtype: float64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1683,9 +1685,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "49b92233",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1736,7 +1740,7 @@
        "       '????damages????', 'mixed up', 'lost'], dtype=object)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1747,7 +1751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "b7be98e0",
    "metadata": {},
    "outputs": [
@@ -1939,7 +1943,7 @@
        "[540570 rows x 8 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1955,7 +1959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "877e33d1",
    "metadata": {},
    "outputs": [
@@ -2032,7 +2036,7 @@
        "max     80995.000000"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2061,7 +2065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "80e8492b",
    "metadata": {},
    "outputs": [
@@ -2078,7 +2082,7 @@
        "Name: InvoiceDate, dtype: object"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2108,7 +2112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "00c777db",
    "metadata": {},
    "outputs": [
@@ -2126,7 +2130,7 @@
        "Name: UnitPrice, dtype: float64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2139,7 +2143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "337a82f5",
    "metadata": {},
    "outputs": [
@@ -2331,7 +2335,7 @@
        "[1179 rows x 8 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2343,7 +2347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "bdbbe5f4",
    "metadata": {
     "scrolled": false
@@ -2537,7 +2541,7 @@
        "[539431 rows x 8 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2553,7 +2557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "af383e81",
    "metadata": {
     "scrolled": true
@@ -3121,7 +3125,7 @@
        "502122 2011-11-25 15:57:00        0.0     13256.0  United Kingdom  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3137,7 +3141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "8e9d594a",
    "metadata": {},
    "outputs": [
@@ -3244,7 +3248,7 @@
        "[4041 rows x 2 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3266,7 +3270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "e8af8b7c",
    "metadata": {
     "scrolled": true
@@ -3834,7 +3838,7 @@
        "39 2011-11-25 15:57:00   0.019738     13256.0  United Kingdom  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3853,7 +3857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "7f9d2257",
    "metadata": {
     "scrolled": true
@@ -4047,7 +4051,7 @@
        "[539431 rows x 8 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4080,7 +4084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "edfc2e51",
    "metadata": {},
    "outputs": [
@@ -4097,7 +4101,7 @@
        "       'European Community', 'Malta', 'RSA'], dtype=object)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4128,7 +4132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "c8b1d5e9",
    "metadata": {},
    "outputs": [
@@ -4146,7 +4150,7 @@
        "Name: CustomerID, dtype: float64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4159,7 +4163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "c6e00651",
    "metadata": {},
    "outputs": [
@@ -4351,7 +4355,7 @@
        "[132602 rows x 8 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4363,7 +4367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "id": "2ecab27e",
    "metadata": {},
    "outputs": [
@@ -4555,7 +4559,7 @@
        "[406829 rows x 8 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4589,7 +4593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "id": "a327d8ae",
    "metadata": {
     "scrolled": true
@@ -4783,7 +4787,7 @@
        "[35809 rows x 8 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4797,7 +4801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "id": "3e3cd087",
    "metadata": {
     "scrolled": true
@@ -4979,7 +4983,7 @@
        "[492053 rows x 7 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5003,6 +5007,115 @@
     "#4.create right table\n",
     "\n",
     "pd.merge(tempL, tempR, left_on=(colName+'Trunc'), right_on=colName, how='left')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "2d52d50a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>StockCode</th>\n",
+       "      <th>Description</th>\n",
+       "      <th>InvoiceNo</th>\n",
+       "      <th>Quantity</th>\n",
+       "      <th>InvoiceDate</th>\n",
+       "      <th>UnitPrice</th>\n",
+       "      <th>CustomerID</th>\n",
+       "      <th>Country</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>15044A</td>\n",
+       "      <td>PINK PAPER PARASOL</td>\n",
+       "      <td>80</td>\n",
+       "      <td>80</td>\n",
+       "      <td>80</td>\n",
+       "      <td>80</td>\n",
+       "      <td>80</td>\n",
+       "      <td>80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>15044B</td>\n",
+       "      <td>BLUE PAPER PARASOL</td>\n",
+       "      <td>49</td>\n",
+       "      <td>49</td>\n",
+       "      <td>49</td>\n",
+       "      <td>49</td>\n",
+       "      <td>49</td>\n",
+       "      <td>49</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>15044C</td>\n",
+       "      <td>PURPLE PAPER PARASOL</td>\n",
+       "      <td>63</td>\n",
+       "      <td>63</td>\n",
+       "      <td>63</td>\n",
+       "      <td>63</td>\n",
+       "      <td>63</td>\n",
+       "      <td>63</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>15044D</td>\n",
+       "      <td>RED PAPER PARASOL</td>\n",
+       "      <td>76</td>\n",
+       "      <td>76</td>\n",
+       "      <td>76</td>\n",
+       "      <td>76</td>\n",
+       "      <td>76</td>\n",
+       "      <td>76</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  StockCode           Description  InvoiceNo  Quantity  InvoiceDate  \\\n",
+       "0    15044A   PINK PAPER PARASOL          80        80           80   \n",
+       "1    15044B   BLUE PAPER PARASOL          49        49           49   \n",
+       "2    15044C  PURPLE PAPER PARASOL         63        63           63   \n",
+       "3    15044D     RED PAPER PARASOL         76        76           76   \n",
+       "\n",
+       "   UnitPrice  CustomerID  Country  \n",
+       "0         80          80       80  \n",
+       "1         49          49       49  \n",
+       "2         63          63       63  \n",
+       "3         76          76       76  "
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df['Description'].str.contains('PAPER PARASOL')].sort_values(by='StockCode').groupby(by=['StockCode', 'Description'], as_index=False).count()"
    ]
   },
   {
@@ -6323,7 +6436,9 @@
    "cell_type": "code",
    "execution_count": 35,
    "id": "9c54641b",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
