--- a/BC2407_AnalyticsII_Class 1_Team 7/3. Analysis Scripts/Section 5.4 - Adding CLV Metrics for UCI and Olist.ipynb
+++ b/BC2407_AnalyticsII_Class 1_Team 7/3. Analysis Scripts/Section 5.4 - Adding CLV Metrics for UCI and Olist.ipynb
@@ -147,7 +147,7 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "df = pd.read_csv('Data/uci_online_retail_cleaned.csv')\n",
+    "df = pd.read_csv('../2. Datasets/uci_online_retail_cleaned.csv')\n",
     "df.head()"
    ]
   },
@@ -157,6 +157,14 @@
    "id": "9cf1fe17",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\bryan\\anaconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3444: DtypeWarning: Columns (9) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+      "  exec(code_obj, self.user_global_ns, self.user_ns)\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -178,213 +186,109 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>product_id</th>\n",
-       "      <th>seller_id</th>\n",
-       "      <th>order_id</th>\n",
-       "      <th>customer_id</th>\n",
-       "      <th>order_status</th>\n",
-       "      <th>order_purchase_timestamp</th>\n",
-       "      <th>order_approved_at</th>\n",
-       "      <th>order_delivered_carrier_date</th>\n",
-       "      <th>order_delivered_customer_date</th>\n",
-       "      <th>order_estimated_delivery_date</th>\n",
-       "      <th>...</th>\n",
-       "      <th>seller_state</th>\n",
-       "      <th>product_category_name</th>\n",
-       "      <th>product_name_lenght</th>\n",
-       "      <th>product_description_lenght</th>\n",
-       "      <th>product_photos_qty</th>\n",
-       "      <th>product_weight_g</th>\n",
-       "      <th>product_length_cm</th>\n",
-       "      <th>product_height_cm</th>\n",
-       "      <th>product_width_cm</th>\n",
-       "      <th>product_category_name_english</th>\n",
+       "      <th>InvoiceNo</th>\n",
+       "      <th>StockCode</th>\n",
+       "      <th>Description</th>\n",
+       "      <th>Quantity</th>\n",
+       "      <th>InvoiceDate</th>\n",
+       "      <th>UnitPrice</th>\n",
+       "      <th>CustomerID</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>ProductVariations</th>\n",
+       "      <th>OrderDetails</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>00066f42aeeb9f3007548bb9d3f33c38</td>\n",
-       "      <td>5670f4db5b62c43d542e1b2d56b0cf7c</td>\n",
-       "      <td>f30149f4a8882a08895b6a242aa0d612</td>\n",
-       "      <td>86c180c33f454b35e1596a99da3dddc4</td>\n",
-       "      <td>delivered</td>\n",
-       "      <td>2018-05-20 18:45:21</td>\n",
-       "      <td>2018-05-20 18:58:59</td>\n",
-       "      <td>2018-05-21 16:09:00</td>\n",
-       "      <td>2018-06-06 22:11:56</td>\n",
-       "      <td>2018-06-20</td>\n",
-       "      <td>...</td>\n",
-       "      <td>SP</td>\n",
-       "      <td>perfumaria</td>\n",
-       "      <td>53</td>\n",
-       "      <td>596</td>\n",
+       "      <td>536365</td>\n",
+       "      <td>85123A</td>\n",
+       "      <td>WHITE HANGING HEART T-LIGHT HOLDER</td>\n",
        "      <td>6</td>\n",
-       "      <td>300.0</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>perfumery</td>\n",
+       "      <td>2010-12-01 08:26:00</td>\n",
+       "      <td>2.55</td>\n",
+       "      <td>17850.0</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>2</td>\n",
+       "      <td>85123A17850.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>00088930e925c41fd95ebfe695fd2655</td>\n",
-       "      <td>7142540dd4c91e2237acb7e911c4eba2</td>\n",
-       "      <td>f5eda0ded77c1293b04c953138c8331d</td>\n",
-       "      <td>68f2b37558e27791155db34bcded5ac0</td>\n",
-       "      <td>delivered</td>\n",
-       "      <td>2017-12-12 19:20:28</td>\n",
-       "      <td>2017-12-12 19:32:19</td>\n",
-       "      <td>2017-12-20 20:12:42</td>\n",
-       "      <td>2017-12-23 17:11:51</td>\n",
-       "      <td>2018-01-05</td>\n",
-       "      <td>...</td>\n",
-       "      <td>SP</td>\n",
-       "      <td>automotivo</td>\n",
-       "      <td>56</td>\n",
-       "      <td>752</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1225.0</td>\n",
-       "      <td>55.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>26.0</td>\n",
-       "      <td>auto</td>\n",
+       "      <td>536365</td>\n",
+       "      <td>71053</td>\n",
+       "      <td>WHITE METAL LANTERN</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2010-12-01 08:26:00</td>\n",
+       "      <td>3.39</td>\n",
+       "      <td>17850.0</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7105317850.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0009406fd7479715e4bef61dd91f2462</td>\n",
-       "      <td>4a3ca9315b744ce9f8e9374361493884</td>\n",
-       "      <td>0bf736fd0fd5169d60de3699fcbcf986</td>\n",
-       "      <td>6cd217b674e22cf568f6a2cf6060fd07</td>\n",
-       "      <td>delivered</td>\n",
-       "      <td>2017-12-21 16:21:47</td>\n",
-       "      <td>2017-12-22 17:31:27</td>\n",
-       "      <td>2018-01-02 22:27:47</td>\n",
-       "      <td>2018-01-06 15:03:41</td>\n",
-       "      <td>2018-01-16</td>\n",
-       "      <td>...</td>\n",
-       "      <td>SP</td>\n",
-       "      <td>cama_mesa_banho</td>\n",
-       "      <td>50</td>\n",
-       "      <td>266</td>\n",
-       "      <td>2</td>\n",
-       "      <td>300.0</td>\n",
-       "      <td>45.0</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>35.0</td>\n",
-       "      <td>bed_bath_table</td>\n",
+       "      <td>536365</td>\n",
+       "      <td>84406B</td>\n",
+       "      <td>CREAM CUPID HEARTS COAT HANGER</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2010-12-01 08:26:00</td>\n",
+       "      <td>2.75</td>\n",
+       "      <td>17850.0</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>1</td>\n",
+       "      <td>84406B17850.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>000b8f95fcb9e0096488278317764d19</td>\n",
-       "      <td>40ec8ab6cdafbcc4f544da38c67da39a</td>\n",
-       "      <td>3aba44d8e554ab4bb8c09f6f78032ca8</td>\n",
-       "      <td>82b838f513e00463174cc7cae7e76c1f</td>\n",
-       "      <td>delivered</td>\n",
-       "      <td>2018-08-10 13:24:35</td>\n",
-       "      <td>2018-08-10 13:35:21</td>\n",
-       "      <td>2018-08-13 14:43:00</td>\n",
-       "      <td>2018-08-17 21:33:40</td>\n",
-       "      <td>2018-08-27</td>\n",
-       "      <td>...</td>\n",
-       "      <td>PR</td>\n",
-       "      <td>utilidades_domesticas</td>\n",
-       "      <td>25</td>\n",
-       "      <td>364</td>\n",
-       "      <td>3</td>\n",
-       "      <td>550.0</td>\n",
-       "      <td>19.0</td>\n",
-       "      <td>24.0</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>housewares</td>\n",
+       "      <td>536365</td>\n",
+       "      <td>84029G</td>\n",
+       "      <td>KNITTED UNION FLAG HOT WATER BOTTLE</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2010-12-01 08:26:00</td>\n",
+       "      <td>3.39</td>\n",
+       "      <td>17850.0</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>2</td>\n",
+       "      <td>84029G17850.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>000b8f95fcb9e0096488278317764d19</td>\n",
-       "      <td>40ec8ab6cdafbcc4f544da38c67da39a</td>\n",
-       "      <td>6f0dfb5b5398b271cc6bbd9ee263530e</td>\n",
-       "      <td>8517e7c86998bf39a540087da6f115d9</td>\n",
-       "      <td>delivered</td>\n",
-       "      <td>2018-08-01 22:00:33</td>\n",
-       "      <td>2018-08-01 22:15:19</td>\n",
-       "      <td>2018-08-02 14:20:00</td>\n",
-       "      <td>2018-08-07 17:38:52</td>\n",
-       "      <td>2018-08-24</td>\n",
-       "      <td>...</td>\n",
-       "      <td>PR</td>\n",
-       "      <td>utilidades_domesticas</td>\n",
-       "      <td>25</td>\n",
-       "      <td>364</td>\n",
-       "      <td>3</td>\n",
-       "      <td>550.0</td>\n",
-       "      <td>19.0</td>\n",
-       "      <td>24.0</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>housewares</td>\n",
+       "      <td>536365</td>\n",
+       "      <td>84029E</td>\n",
+       "      <td>RED WOOLLY HOTTIE WHITE HEART.</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2010-12-01 08:26:00</td>\n",
+       "      <td>3.39</td>\n",
+       "      <td>17850.0</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>2</td>\n",
+       "      <td>84029E17850.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 40 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                         product_id                         seller_id  \\\n",
-       "0  00066f42aeeb9f3007548bb9d3f33c38  5670f4db5b62c43d542e1b2d56b0cf7c   \n",
-       "1  00088930e925c41fd95ebfe695fd2655  7142540dd4c91e2237acb7e911c4eba2   \n",
-       "2  0009406fd7479715e4bef61dd91f2462  4a3ca9315b744ce9f8e9374361493884   \n",
-       "3  000b8f95fcb9e0096488278317764d19  40ec8ab6cdafbcc4f544da38c67da39a   \n",
-       "4  000b8f95fcb9e0096488278317764d19  40ec8ab6cdafbcc4f544da38c67da39a   \n",
+       "   InvoiceNo StockCode                          Description  Quantity  \\\n",
+       "0     536365    85123A   WHITE HANGING HEART T-LIGHT HOLDER         6   \n",
+       "1     536365     71053                  WHITE METAL LANTERN         6   \n",
+       "2     536365    84406B       CREAM CUPID HEARTS COAT HANGER         8   \n",
+       "3     536365    84029G  KNITTED UNION FLAG HOT WATER BOTTLE         6   \n",
+       "4     536365    84029E       RED WOOLLY HOTTIE WHITE HEART.         6   \n",
        "\n",
-       "                           order_id                       customer_id  \\\n",
-       "0  f30149f4a8882a08895b6a242aa0d612  86c180c33f454b35e1596a99da3dddc4   \n",
-       "1  f5eda0ded77c1293b04c953138c8331d  68f2b37558e27791155db34bcded5ac0   \n",
-       "2  0bf736fd0fd5169d60de3699fcbcf986  6cd217b674e22cf568f6a2cf6060fd07   \n",
-       "3  3aba44d8e554ab4bb8c09f6f78032ca8  82b838f513e00463174cc7cae7e76c1f   \n",
-       "4  6f0dfb5b5398b271cc6bbd9ee263530e  8517e7c86998bf39a540087da6f115d9   \n",
+       "           InvoiceDate  UnitPrice  CustomerID         Country  \\\n",
+       "0  2010-12-01 08:26:00       2.55     17850.0  United Kingdom   \n",
+       "1  2010-12-01 08:26:00       3.39     17850.0  United Kingdom   \n",
+       "2  2010-12-01 08:26:00       2.75     17850.0  United Kingdom   \n",
+       "3  2010-12-01 08:26:00       3.39     17850.0  United Kingdom   \n",
+       "4  2010-12-01 08:26:00       3.39     17850.0  United Kingdom   \n",
        "\n",
-       "  order_status order_purchase_timestamp    order_approved_at  \\\n",
-       "0    delivered      2018-05-20 18:45:21  2018-05-20 18:58:59   \n",
-       "1    delivered      2017-12-12 19:20:28  2017-12-12 19:32:19   \n",
-       "2    delivered      2017-12-21 16:21:47  2017-12-22 17:31:27   \n",
-       "3    delivered      2018-08-10 13:24:35  2018-08-10 13:35:21   \n",
-       "4    delivered      2018-08-01 22:00:33  2018-08-01 22:15:19   \n",
-       "\n",
-       "  order_delivered_carrier_date order_delivered_customer_date  \\\n",
-       "0          2018-05-21 16:09:00           2018-06-06 22:11:56   \n",
-       "1          2017-12-20 20:12:42           2017-12-23 17:11:51   \n",
-       "2          2018-01-02 22:27:47           2018-01-06 15:03:41   \n",
-       "3          2018-08-13 14:43:00           2018-08-17 21:33:40   \n",
-       "4          2018-08-02 14:20:00           2018-08-07 17:38:52   \n",
-       "\n",
-       "  order_estimated_delivery_date  ... seller_state  product_category_name  \\\n",
-       "0                    2018-06-20  ...           SP             perfumaria   \n",
-       "1                    2018-01-05  ...           SP             automotivo   \n",
-       "2                    2018-01-16  ...           SP        cama_mesa_banho   \n",
-       "3                    2018-08-27  ...           PR  utilidades_domesticas   \n",
-       "4                    2018-08-24  ...           PR  utilidades_domesticas   \n",
-       "\n",
-       "  product_name_lenght product_description_lenght product_photos_qty  \\\n",
-       "0                  53                        596                  6   \n",
-       "1                  56                        752                  4   \n",
-       "2                  50                        266                  2   \n",
-       "3                  25                        364                  3   \n",
-       "4                  25                        364                  3   \n",
-       "\n",
-       "   product_weight_g product_length_cm product_height_cm product_width_cm  \\\n",
-       "0             300.0              20.0              16.0             16.0   \n",
-       "1            1225.0              55.0              10.0             26.0   \n",
-       "2             300.0              45.0              15.0             35.0   \n",
-       "3             550.0              19.0              24.0             12.0   \n",
-       "4             550.0              19.0              24.0             12.0   \n",
-       "\n",
-       "  product_category_name_english  \n",
-       "0                     perfumery  \n",
-       "1                          auto  \n",
-       "2                bed_bath_table  \n",
-       "3                    housewares  \n",
-       "4                    housewares  \n",
-       "\n",
-       "[5 rows x 40 columns]"
+       "   ProductVariations   OrderDetails  \n",
+       "0                  2  85123A17850.0  \n",
+       "1                  1   7105317850.0  \n",
+       "2                  1  84406B17850.0  \n",
+       "3                  2  84029G17850.0  \n",
+       "4                  2  84029E17850.0  "
       ]
      },
      "execution_count": 2,
@@ -393,7 +297,7 @@
     }
    ],
    "source": [
-    "df2 = pd.read_csv('Data/Orders_merged.csv')\n",
+    "df2 = pd.read_csv('../2. Datasets/uci_online_retail_cleaned.csv')\n",
     "df2.head()"
    ]
   },
