--- a/BC2407_AnalyticsII_Class 1_Team 7/3. Analysis Scripts/Section 2.1 - Data Cleaning UCI eCommerce.ipynb
+++ b/BC2407_AnalyticsII_Class 1_Team 7/3. Analysis Scripts/Section 2.1 - Data Cleaning UCI eCommerce.ipynb
@@ -25,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_excel('Data/Raw Data/uci_online_retail.xlsx')"
+    "df = pd.read_excel('../2. Datasets/Raw Data/uci_online_retail.xlsx')"
    ]
   },
   {
